# snaq-lite

./: .cursorrules  .gitignore  Cargo.toml  README.md  clippy.toml  package.json
.cursor/plans/: add-area-dimension-and-units.plan.md  cli-file-format-integration-tests.plan.md  e2e-editor-worker-protocol-test.plan.md  remove-block-connections-in-ui.plan.md
.github/workflows/: test.yml
apps/frontend/: .env.example  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/frontend/e2e/: canvas.spec.ts  computation-result.spec.ts  home.spec.ts  project-list.spec.ts
apps/frontend/e2e/fixtures/: valid-project.snaq.json
apps/frontend/src/: app.css  entry-client.tsx  home.test.ts  monaco-environment.ts
apps/frontend/src/api/: client.test.ts  client.ts
apps/frontend/src/canvas/: document-state.test.ts  document-state.ts
apps/frontend/src/components/: lsp-provider.tsx  project-toolbar.tsx  toast-list.tsx
apps/frontend/src/contexts/: auto-save-context.test.tsx  auto-save-context.tsx
apps/frontend/src/editor/: apply-diagnostics.test.ts  apply-diagnostics.ts  diagnostics-mapping.test.ts  diagnostics-mapping.ts  model-lifecycle.test.ts  model-lifecycle.ts  monaco-language-client.ts  text-model-registry.test.ts  text-model-registry.ts  virtual-uri.test.ts  virtual-uri.ts
apps/frontend/src/eslint/: lint-rules.test.ts  test-eslint.config.js
apps/frontend/src/hooks/: use-project-loader.test.ts  use-project-loader.ts  use-subscribe-widget.test.tsx  use-subscribe-widget.ts
apps/frontend/src/lib/: blob-url-cache.test.ts  blob-url-cache.ts  build-external-streams.test.ts  build-external-streams.ts  computation-document-content.test.ts  computation-document-content.ts  constants.test.ts  constants.ts  export-import.test.ts  export-import.ts  file-blob-idb.test.ts  file-blob-idb.ts  focus-debug.ts  perform-undo-redo.test.ts  perform-undo-redo.ts  project-list-sort.test.ts  project-list-sort.ts  project-loader-utils.test.ts  project-loader-utils.ts  project-storage.test.ts  project-storage.ts  sync-graph-to-lsp.test.ts  sync-graph-to-lsp.ts  utils.test.ts  utils.ts
apps/frontend/src/lsp/: canvas-runtime.test.ts  canvas-runtime.ts  client.test.ts  client.ts  fetch-result-slice.test.ts  fetch-result-slice.ts  frame.ts  graph-patch.test.ts  graph-patch.ts  index.ts  language-client-singleton.test.ts  language-client-singleton.ts  lsp-connection.test.ts  lsp-connection.ts  lsp.worker.ts  message-router.test.ts  message-router.ts  node-runtime-state.test.ts  node-runtime-state.ts  pagination.test.ts  pagination.ts  types.test.ts  (+9 more)
crates/snaq-lite-cli/: Cargo.toml
crates/snaq-lite-cli/src/: main.rs  stream_feed_dispatch.rs  stream_feeder.rs
crates/snaq-lite-cli/tests/: cli_file_formats_integration.rs  cli_stream_integration.rs  common.rs
crates/snaq-lite-ingest/: Cargo.toml
crates/snaq-lite-ingest/src/: arrow_parser.rs  csv_parser.rs  error.rs  format.rs  lib.rs  parquet_parser.rs  record_batch.rs
crates/snaq-lite-lang/: Cargo.toml
crates/snaq-lite-lang/src/: csv_stream_parse.rs  date.rs  dimension.rs  error.rs  expr.lalrpop  functions.rs  fuzzy.rs  graph.rs  ir.rs  lexer.rs  lib.rs  map_registry.rs  parser.rs  prefix.rs  quantity.rs  queries.rs  resolve.rs  scope.rs  stat_compare.rs  stream_handle.rs  stream_variance.rs  symbol_registry.rs  symbolic.rs  unit.rs  unit_registry.rs  user_function.rs  vector.rs  vector_registry.rs
crates/snaq-lite-lang/src/cas/: canonical.rs  convert.rs  interner.rs  mod.rs  rewrite.rs  substitute.rs
crates/snaq-lite-lsp/: Cargo.toml
crates/snaq-lite-lsp/src/: graph.rs  lib.rs  main.rs  mapping.rs  node_result_registry.rs  position.rs  pubsub.rs  result_handle_registry.rs  runtime_engine.rs  state.rs  stream_host.rs  subscription.rs  transport.rs  vector_slice.rs  widget_registry.rs
crates/snaq-lite-lsp/tests/: lsp_integration.rs  wasm_runtime_contract.rs
crates/snaq-lite-wasm/: Cargo.toml
crates/snaq-lite-wasm/src/: host.rs  lib.rs
docs/: BLOCKS_AND_EXPRESSIONS.md  CANVAS_RUNTIME.md  COMPARISONS_AND_FUZZY_BOOL.md  COMPUTATION_BLOCKS.md  CONDITIONALS.md  DATES.md  ERRORS_AND_EDGE_CASES.md  EXTERNAL_STREAMS.md  FUNCTIONS.md  LITERALS_AND_VALUES.md  LSP.md  MAPS.md  NUMBAT_COMPARISON.md  PRECISION.md  README.md  SYMBOLS.md  SYNTAX.md  UNITS_AND_QUANTITIES.md  VARIABLE_BINDINGS.md  VECTORS.md  agent-ui-workflow.md
memory/: activeContext.md  productContext.md  systemPatterns.md
scripts/: check-wasm-build.sh  complexity-report.sh  show-pr-comments.sh
(+49 files in other folders)
