[package]
name = "snaq-lite-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snaq-lite"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
futures = "0.3"
snaq-lite-ingest = { path = "../snaq-lite-ingest", default-features = false }
snaq-lite-lang = { path = "../snaq-lite-lang" }

[features]
default = []
# Enable Parquet and Arrow IPC file support for --stream name=path (adds arrow/parquet deps).
parquet = ["snaq-lite-ingest/parquet"]
