[package]
name = "snaq-lite-ingest"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
snaq-lite-lang = { path = "../snaq-lite-lang" }
csv = "1.3"
arrow = { version = "53", optional = true }
arrow-ipc = { version = "53", optional = true }
bytes = { version = "1", optional = true }
parquet = { version = "53", optional = true }

[features]
default = []
# Parquet and Arrow IPC support (streaming row-by-row; requires Read+Seek for Parquet/Arrow file format).
parquet = ["dep:arrow", "dep:arrow-ipc", "dep:bytes", "dep:parquet"]
