[package]
name = "snaq-lite-lang"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[build-dependencies]
lalrpop = "0.21"

[dependencies]
futures = "0.3"
singularize = "0.1"
lalrpop-util = { version = "0.21", features = ["lexer"] }
num-rational = "0.4"
num-traits = "0.2"
ordered-float = "4"
salsa = { version = "0.26.0", features = ["inventory"] }
