[package]
name = "snaq-lite-lsp"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

# Native binary (excluded when building for wasm32)
[[bin]]
name = "snaq-lite-lsp"
path = "src/main.rs"

[dependencies]
snaq-lite-lang = { path = "../snaq-lite-lang" }
futures = "0.3"
async-trait = "0.1"
salsa = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# Native: full tower-lsp and Tokio
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
serde_json = "1"

# WASM: runtime-agnostic LSP, no Tokio; getrandom for lang/statrs
[target.'cfg(target_arch = "wasm32")'.dependencies]
tower-lsp = { version = "0.20", default-features = false, features = ["runtime-agnostic"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
