[package]
name = "snaq-lite-wasm"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
snaq-lite-lang = { path = "../snaq-lite-lang" }
salsa = "0.26"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamDefaultController",
]

# getrandom is pulled in by statrs → rand → rand_core; enable "js" for wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
